server/7.2/metrics-reference/xdcr-metrics.md
---
title: XDCR Metrics
description: A list of the metrics provided by XDCR.
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-server/edit/release/7.2/modules/metrics-reference/pages/xdcr-metrics.adoc
  xref: xref:7.2@server:metrics-reference:xdcr-metrics.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/server/7.2/metrics-reference/xdcr-metrics.html)

# XDCR Metrics

> A list of the metrics provided by XDCR. 

The following XDCR metrics can be queried by means of the REST APIs described in [Statistics](../rest-api/rest-statistics.md).

> [!TIP]
> * The x.y.z badge shows the Couchbase Server version the metric was added in.
> * The type / unit badge shows shows the Prometheus [type](https://prometheus.io/docs/tutorials/understanding%5Fmetric%5Ftypes/) and [unit](https://prometheus.io/docs/practices/naming/#base-units) (if present).

| xdcr\_binary\_filtered\_total7.2.1 counter Number of documents filtered that were binary documents                                                                                                                                                                               |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| xdcr\_changes\_left\_total7.0.0 gauge Given the vBuckets of this node, the number of sequence numbers that need to be processed (either replicated or handled) before catching up to the high sequence numbers for the vBuckets                                                  |
| xdcr\_data\_replicated\_bytes7.0.0 counter / bytes Amount of data replicated for a Replication                                                                                                                                                                                   |
| xdcr\_datapool\_failed\_gets\_total7.0.0 counter The total number of failed GET() operation on a reusable datapool within XDCR for the purpose of avoiding garbage generation                                                                                                    |
| xdcr\_dcp\_datach\_length\_total7.0.0 gauge The number of items sent by the Data Service waiting for the XDCR Source Nozzle to ingest and process                                                                                                                                |
| xdcr\_dcp\_dispatch\_time\_seconds7.0.0 gauge / seconds The rolling average amount of time it takes for a document to be received by XDCR from the Data Service, to the time it is queued up in the Target Nozzle ready to be sent                                               |
| xdcr\_deletion\_cloned\_total7.2.1 counter The number of times a Source Deletion or Expiration is cloned to be written to multiple Target Namespaces                                                                                                                             |
| xdcr\_deletion\_docs\_written\_total7.0.0 counter Number of Deletions written to Target                                                                                                                                                                                          |
| xdcr\_deletion\_failed\_cr\_source\_total7.0.0 counter Number of Deletions that failed Source-side Conflict Resolution                                                                                                                                                           |
| xdcr\_deletion\_failed\_cr\_target\_total7.1.0 counter Number of Deletions that failed Conflict Resolution at the Target                                                                                                                                                         |
| xdcr\_deletion\_filtered\_total7.0.0 counter Number of Deletions that were filtered Source-side                                                                                                                                                                                  |
| xdcr\_deletion\_received\_from\_dcp\_total7.0.0 counter Number of Deletions received from the Data Service                                                                                                                                                                       |
| xdcr\_docs\_cas\_poisoned\_total7.2.6 counter Total number of documents not replicated because cas is beyond acceptable drift threshold                                                                                                                                          |
| xdcr\_docs\_checked\_total7.0.0 gauge Across vBuckets for this node, the sum of all sequence numbers that have been considered to be checkpointed                                                                                                                                |
| xdcr\_docs\_cloned\_total7.0.0 counter Number of Source Document Mutation cloned to be written to different Target Namespaces                                                                                                                                                    |
| xdcr\_docs\_compression\_skipped\_total7.2.7 counter Total number of documents whose compression was skipped before replication, due to a larger snappy-compressed size                                                                                                          |
| xdcr\_docs\_failed\_cr\_source\_total7.0.0 counter Number of documents (or tombstones) that were not replicated to the Target due to Conflict Resolution evaluated on the Source                                                                                                 |
| xdcr\_docs\_failed\_cr\_target\_total7.1.0 counter Number of documents failed Conflict Resolution at the Target                                                                                                                                                                  |
| xdcr\_docs\_filtered\_total7.0.0 gauge Total number of documents filtered and not replicated due to any type of filtering                                                                                                                                                        |
| xdcr\_docs\_opt\_repd\_total7.0.0 counter Number of Documents Optimistically Replicated to the Target Cluster                                                                                                                                                                    |
| xdcr\_docs\_processed\_total7.0.0 gauge Number of Documents processed for a Replication                                                                                                                                                                                          |
| xdcr\_docs\_received\_from\_dcp\_total7.0.0 counter Number of Document Mutations received from the Data Service                                                                                                                                                                  |
| xdcr\_docs\_unable\_to\_filter\_total7.0.0 gauge Number of Document Mutations that couldn't be filtered due to inability to parse the document through Advanced Filtering engine and were not replicated                                                                         |
| xdcr\_docs\_written\_total7.0.0 counter Number of docs Document Mutations written/sent to the Target                                                                                                                                                                             |
| xdcr\_expiry\_docs\_written\_total7.0.0 counter Number of Expirations written to the Target                                                                                                                                                                                      |
| xdcr\_expiry\_failed\_cr\_source\_total7.0.0 counter Number of Expirations that failed Source-side Conflict Resolution                                                                                                                                                           |
| xdcr\_expiry\_failed\_cr\_target\_total7.1.0 counter Number of Expirations that failed Conflict Resolution at the Target                                                                                                                                                         |
| xdcr\_expiry\_filtered\_total7.0.0 counter Number of Expirations filtered Source-side                                                                                                                                                                                            |
| xdcr\_expiry\_received\_from\_dcp\_total7.0.0 counter Number of Expirations or documents with TTL received from the Data Service                                                                                                                                                 |
| xdcr\_expiry\_stripped\_total7.0.0 counter Number of Document Mutations replicated that had the TTL changed to 0 before writing to Target (Source is unmodified)                                                                                                                 |
| xdcr\_num\_checkpoints\_total7.0.0 counter The number of times checkpoint operation has completed successfully since this XDCR process instance is made aware of this replication                                                                                                |
| xdcr\_num\_failedckpts\_total7.0.0 counter The number of times checkpoint operation has encountered an error since this XDCR process instance is made aware of this replication                                                                                                  |
| xdcr\_pipeline\_errors7.2.1 gauge The number of currently present errors for a specific Replication Pipeline                                                                                                                                                                     |
| xdcr\_pipeline\_status7.2.1 gauge The pipeline status for a specific pipeline, where it could be paused, running or, error                                                                                                                                                       |
| xdcr\_resp\_wait\_time\_seconds7.0.0 gauge / seconds The rolling average amount of time it takes from when a MemcachedRequest is created to be ready to route to an outnozzle to the time that the response has been heard back from the target node after a successful write    |
| xdcr\_seqno\_adv\_received\_from\_dcp\_total7.2.5 counter The number of seqno advance events received from source data service                                                                                                                                                   |
| xdcr\_set\_docs\_written\_total7.0.0 counter Number of Set operations successfully written to the Target                                                                                                                                                                         |
| xdcr\_set\_failed\_cr\_target\_total7.1.0 counter Number of Set operations that failed Conflict Resolution at the Target                                                                                                                                                         |
| xdcr\_set\_filtered\_total7.0.0 counter Number of documents filtered that was of a DCP mutation                                                                                                                                                                                  |
| xdcr\_set\_received\_from\_dcp\_total7.0.0 counter Number of Sets received from the Data Service                                                                                                                                                                                 |
| xdcr\_size\_rep\_queue\_bytes7.0.0 gauge / bytes Amount of data being queued to be sent in a Target Nozzle                                                                                                                                                                       |
| xdcr\_system\_events\_received\_from\_dcp\_total7.2.5 counter The number of system events received from source data service                                                                                                                                                      |
| xdcr\_target\_eaccess\_total7.2.1 counter The total number of EACCESS errors returned from the target node.                                                                                                                                                                      |
| xdcr\_target\_tmpfail\_total7.2.1 counter The total number of TMPFAIL errors returned from the target node.                                                                                                                                                                      |
| xdcr\_throttle\_latency\_seconds7.0.0 gauge / seconds The rolling average of the latency time introduced due to bandwith throttler                                                                                                                                               |
| xdcr\_throughput\_throttle\_latency\_seconds7.0.0 gauge / seconds The rolling average of the latency time introduced due to throughput throttler                                                                                                                                 |
| xdcr\_time\_committing\_seconds7.0.0 gauge / seconds The rolling average amount of time it takes for a checkpoint operation to complete                                                                                                                                          |
| xdcr\_wtavg\_docs\_latency\_seconds7.0.0 gauge / seconds The rolling average amount of time it takes for the source cluster to receive the acknowledgement of a SET\_WITH\_META response after the Memcached request has been composed to be processed by the XDCR Target Nozzle |
| xdcr\_wtavg\_meta\_latency\_seconds7.0.0 gauge / seconds The rolling average amount of time it takes once a getMeta command is composed to be sent to the time the request is handled once the target node has responded                                                         |